@@ -1,3 +1,15 @@
+2012-10-03  Richard Murray  <murray@altura.local>
+
+	* tests/matlab_test.py (TestMatlab.testSsdata): unit test
+
+	* src/matlab.py (ssdata, tfdata): new functions to return state
+	space and transfer function object data.  For transfer functions,
+	currenly requires SISO system
+
+	* src/freqplot.py (bode_plot):  Adding np.atleast_1d to the
+	np.squeeze calculations makes it possible to use a single value
+	frequency list (contributed by Benjamin White)
+
 2012-09-09  Richard Murray  <murray@altura.local>
 
 	* tests/statefbk_test.py (TestStatefbk.testAcker): unit test
